mer optimal minnes.inställningar från Overtone